--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <header><nav id="nav-top">
     <div id="nav-title">
-        <a href="/main.html"><img src="/Basket website/Basket Berne.png" id="nav-logo"></a>
-          <h1><a href="/main.html" >Basket's berne</a></h1> 
+        <a href="/index.html"><img src="/Basket website/Basket Berne.png" id="nav-logo"></a>
+          <h1><a href="/index.html" >Basket's berne</a></h1> 
     </div>
 <div id="nav-links">
 
