--- a/header.html
+++ b/header.html
@@ -1,13 +1,13 @@
 <header><nav id="nav-top">
     <div id="nav-title">
-        <a href="/index.html"><img src="/Basket website/Basket Berne.png" id="nav-logo"></a>
-          <h1><a href="/index.html" >Basket's berne</a></h1> 
+        <a href="/store-basket"><img src="/Basket website/Basket Berne.png" id="nav-logo"></a>
+          <h1><a href="/store-basket" >Basket's berne</a></h1> 
     </div>
 <div id="nav-links">
 
-<a href="/about.html" class="nav-link">About us</a>
-<a href="/contact.html" class="nav-link">Contact</a>
-<a href="/store.html" class="nav-link">Store</a>
+<a href="/store-basket/about.html" class="nav-link">About us</a>
+<a href="/store-basket/contact.html" class="nav-link">Contact</a>
+<a href="/store-basket/store.html" class="nav-link">Store</a>
 </div>
 </nav>
 </header>
