--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>
         Basket's Berne
     </title>
-    <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="store-basket/main.css"/>
     <link rel="icon" type="image/png" href="Basket website/Basket Berne.png">
 
 </head>
