--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         Basket's Berne
     </title>
     <link rel="stylesheet" href="store-basket/main.css"/>
-    <link rel="icon" type="image/png" href="Basket website/Basket Berne.png">
+    <link rel="icon" type="image/png" href="store-basket/Basket website/Basket Berne.png">
 
 </head>
 <div id="header"></div>
