--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="/contact.css">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/store-basket/contact.css">
+    <link rel="stylesheet" href="/store-basket/main.css">
     <link rel="icon" type="image/png" href="Basket website/Basket Berne.png">
 
     
