--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>About us</title>
     <link rel="stylesheet" href="/store-basket/main.css">
     <link rel="stylesheet" href="/store-basket/about.css">
-    <link rel="icon" type="image/png" href="Basket website/Basket Berne.png">
+    <link rel="icon" type="image/png" href="store-basket/Basket website/Basket Berne.png">
     
 </head>
 <div id="header"></div>
