--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="/store-basket/contact.css">
     <link rel="stylesheet" href="/store-basket/main.css">
-    <link rel="icon" type="image/png" href="Basket website/Basket Berne.png">
+    <link rel="icon" type="image/png" href="store-basket/Basket website/Basket Berne.png">
 
     
 </head>
