--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         Basket's Berne
     </title>
     <link rel="stylesheet" href="main.css"/>
-    <link rel="icon" type="image/png" href="store-basket/Basket website/Basket Berne.png">
+    <link rel="icon" type="image/png" href="/store-basket/Basket website/Basket Berne.png">
 
 </head>
 <div id="header"></div>
@@ -19,12 +19,12 @@
             </div>
     </div>
         <div class="item2">
-            <img src="store-basket/Basket website/1.jpg" class="pic-main1">
+            <img src="/store-basket/Basket website/1.jpg" class="pic-main1">
         </div>
 </div>
 <div class="container">
     <div class="item1">
-        <img src="store-basket/Basket website/2.jpg" class="pic-main2"alt="">
+        <img src="/store-basket/Basket website/2.jpg" class="pic-main2"alt="">
 </div>
     <div class="item2">
         <div class="item2-child">
