--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>Explore our collection now.</h1>
             <p>Discover the art of handmade craftsmanship with our unique collection of baskets, perfect for every space in your home. Each piece is
                thoughtfully designed to blend beauty with practicality. Ready to transform your space?</p>
-        <a class="btn" href="store-basket/store.html">Explore </a>
+        <a class="btn" href="/store-basket/store.html">Explore </a>
             </div>
     </div>
         <div class="item2">
@@ -32,7 +32,7 @@
         <h1>Basket plant</h1>
         <h5 class="price-tag">49.9 CHF</h5>
         <p>Add a touch of natural beauty to your living room with this handcrafted basket, perfect for showcasing your favorite plant. Its rustic charm and sturdy design make it an ideal piece for both decoration and functionality.</p>
-        <a class="btn" href="store-basket/store.html">Show more </a>
+        <a class="btn" href="/store-basket/store.html">Show more </a>
     </div>
     </div>
 </div>
