--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact</title>
     <link rel="stylesheet" href="/store-basket/contact.css">
     <link rel="stylesheet" href="/store-basket/main.css">
-    <link rel="icon" type="image/png" href="store-basket/Basket website/Basket Berne.png">
+    <link rel="icon" type="image/png" href="/store-basket/Basket website/Basket Berne.png">
 
     
 </head>
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
     <div class="item1">
-        <img src="/Basket website/Contact picture.png" class="pic-main2"alt="">
+        <img src="/store-basket/Basket website/Contact picture.png" class="pic-main2"alt="">
 </div>
     <div class="item3">
         <div class="item3-child">
