--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </div>
     </div>
         <div class="item2">
-            <img src="/Basket website/pic.webp" class="pic-main1">
+            <img src="/store-basket/Basket website/pic.webp" class="pic-main1">
         </div>
 </div>
 </body>
