--- a/store.html
+++ b/store.html
@@ -16,7 +16,7 @@
     <div class="container-store">
         <div class="item1-store">
             
-                <img class="img-store" src="/Basket website/4.jpg" alt="">
+                <img class="img-store" src="/store-basket/Basket website/4.jpg" alt="">
                 <div class="product">
                 <h1 class="title-product">Rustic Hanging Woven Basket </h1>
                 <h1 class="price-tag-store">60 CHF</h1>
@@ -25,7 +25,7 @@
 
         </div>
         <div class="item2-store">
-                <img  class="img-store" src="/Basket website/3.jpeg" alt="">
+                <img  class="img-store" src="/store-basket/Basket website/3.jpeg" alt="">
                 <div class="product">
                     <h1 class="title-product" >Handwoven Storage Basket with Handles</h1>
                 <h1 class="price-tag-store"> 78 CHF</h1>
@@ -33,7 +33,7 @@
                 <p class="product-description">This handwoven storage basket is the perfect blend of durability and style. Its spacious design and sturdy handles make it ideal for organizing anything from blankets to toys while adding a warm, natural touch to your home decor. Place it in your living room, bedroom, or bathroom to keep your space tidy and chic.</p>
         </div>
         <div class="item3-store">
-                <img class="img-store" src="/Basket website/5.webp" alt="">
+                <img class="img-store" src="/store-basket/Basket website/5.webp" alt="">
                 <div class="product">
                 <h1 class="title-product">Pull-Out Kitchen Storage Baskets</h1>
                 <h1 class="price-tag-store"> 100 CHF</h1>
@@ -44,7 +44,7 @@
     <div class="container-store">
         <div class="item1-store">
             
-                <img class="img-store" src="/Basket website/4.jpg" alt="">
+                <img class="img-store" src="/store-basket/Basket website/4.jpg" alt="">
                 <div class="product">
                 <h1 class="title-product">Rustic Hanging Woven Basket </h1>
                 <h1 class="price-tag-store">60 CHF</h1>
@@ -53,7 +53,7 @@
 
         </div>
         <div class="item2-store">
-                <img  class="img-store" src="/Basket website/3.jpeg" alt="">
+                <img  class="img-store" src="/store-basket/Basket website/3.jpeg" alt="">
                 <div class="product">
                     <h1 class="title-product" >Handwoven Storage Basket with Handles</h1>
                 <h1 class="price-tag-store"> 78 CHF</h1>
@@ -61,7 +61,7 @@
                 <p class="product-description">This handwoven storage basket is the perfect blend of durability and style. Its spacious design and sturdy handles make it ideal for organizing anything from blankets to toys while adding a warm, natural touch to your home decor. Place it in your living room, bedroom, or bathroom to keep your space tidy and chic.</p>
         </div>
         <div class="item3-store">
-                <img class="img-store" src="/Basket website/5.webp" alt="">
+                <img class="img-store" src="/store-basket/Basket website/5.webp" alt="">
                 <div class="product">
                 <h1 class="title-product">Pull-Out Kitchen Storage Baskets</h1>
                 <h1 class="price-tag-store"> 100 CHF</h1>
