--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <header><nav id="nav-top">
     <div id="nav-title">
-        <a href="/store-basket"><img src="store-basket/Basket website/Basket Berne.png" id="nav-logo"></a>
+        <a href="/store-basket"><img src="/store-basket/Basket website/Basket Berne.png" id="nav-logo"></a>
           <h1><a href="/store-basket" >Basket's berne</a></h1> 
     </div>
 <div id="nav-links">
