--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,15 @@
         <p>If you have any questions or wish to make a purchase, please provide your details along with the name of the product from our store page. If you would like something more personalized, feel free to add your specific requirements in the description. We will get in touch with you to confirm your order or to assist you further.</p>
         <form action="">
             <label>First name</label>
-            <input type="name" class="fullname" placeholder="Enter your first name">
+            <input type="name" class="fullname" >
             <label>Last name</label>
-            <input type="name" class="fullname" placeholder="Enter your last name">
+            <input type="name" class="fullname" >
             <label>E-mail</label>
-            <input type="email" class="input-form" placeholder="Enter your e-mail">
+            <input type="email" class="input-form" >
             <label for="">Number Phone</label>
-            <input type="number" class="input-form" placeholder="Enter your number phone">
+            <input type="number" class="input-form" >
             <label for="text">Message</label>
-            <textarea name="message" id="message-form" placeholder="Enter your message"></textarea>
+            <textarea name="message" id="message-form"></textarea>
             <div class="btn-div"><button type="submit" class="btn">Submit</button> 
             <button type="reset" class="btn">Reset</button>
         </div>
